--- a/Python/IonLaserPlot.ipynb
+++ b/Python/IonLaserPlot.ipynb
@@ -108,15 +108,24 @@
     "levels=100\n",
     "figureDPI=1200\n",
     "figureType=\"jpeg\"\n",
-    "timeUnit=\"fs\"\n",
-    "# dir='D:\\\\doc\\\\data\\\\pulses\\\\squeue\\\\'\n",
-    "dir='D:\\\\dataofpro\\\\'\n",
+    "timeUnit=\"fs\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "dir='D:\\\\doc\\\\data\\\\pulses\\\\cubic1\\\\'\n",
+    "#dir='D:\\\\dataofpro\\\\'\n",
     "name='squeue'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "# f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
     "# print(f.read(1500))\n",
-    "outdir='D:\\\\doc\\\\data\\\\pulses\\\\'"
+    "outdir=dir#'D:\\\\doc\\\\data\\\\pulses\\\\'"
    ]
   },
   {
