--- a/Python/LAMAO.ipynb
+++ b/Python/LAMAO.ipynb
@@ -150,11 +150,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\dataofpro\\\\test\\\\10311736\\\\'\n",
+    "dir='D:\\\\dataofpro\\\\test\\\\11042106\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
-    "f=open(dir+\"alog.txt\",encoding=\"utf-8\")\n",
-    "print(f.read(1500))"
+    "# f=open(dir+\"alog.txt\",encoding=\"utf-8\")\n",
+    "# print(f.read(1500))"
    ]
   },
   {
@@ -195,14 +195,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt(dir+'cos1Zz.dat')\n",
-    "t=data[:,0]\n",
-    "v=data[:,1]\n",
-    "plt.plot(t,v,'k-')\n",
-    "plt.xlabel('Time ('+timeUnit+')')\n",
-    "plt.ylabel('$\\\\langle \\\\mathrm{cos} \\\\theta \\\\rangle _{Zz}$')\n",
-    "plt.savefig(dir+'cos1Zz'+figureType,bbox_inches='tight',dpi=figureDPI)\n",
-    "plt.show()"
+    "# data=np.loadtxt(dir+'cos1Zz.dat')\n",
+    "# t=data[:,0]\n",
+    "# v=data[:,1]\n",
+    "# plt.plot(t,v,'k-')\n",
+    "# plt.xlabel('Time ('+timeUnit+')')\n",
+    "# plt.ylabel('$\\\\langle \\\\mathrm{cos} \\\\theta \\\\rangle _{Zz}$')\n",
+    "# plt.savefig(dir+'cos1Zz'+figureType,bbox_inches='tight',dpi=figureDPI)\n",
+    "# plt.show()"
    ]
   },
   {
@@ -211,14 +211,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt(dir+'cos2Zz.dat')\n",
-    "t=data[:,0]\n",
-    "v=data[:,1]\n",
-    "plt.plot(t,v,'k-')\n",
-    "plt.xlabel('Time ('+timeUnit+')')\n",
-    "plt.ylabel('$\\\\langle \\\\mathrm{cos} ^2 \\\\theta\\\\rangle _{Zz}$')\n",
-    "plt.savefig(dir+'cos2Zz'+figureType,bbox_inches='tight',dpi=figureDPI)\n",
-    "plt.show()"
+    "# data=np.loadtxt(dir+'cos2Zz.dat')\n",
+    "# t=data[:,0]\n",
+    "# v=data[:,1]\n",
+    "# plt.plot(t,v,'k-')\n",
+    "# plt.xlabel('Time ('+timeUnit+')')\n",
+    "# plt.ylabel('$\\\\langle \\\\mathrm{cos} ^2 \\\\theta\\\\rangle _{Zz}$')\n",
+    "# plt.savefig(dir+'cos2Zz'+figureType,bbox_inches='tight',dpi=figureDPI)\n",
+    "# plt.show()"
    ]
   },
   {
@@ -236,11 +236,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt(dir+'js.dat')\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "z=data[:,2]\n",
-    "plt.tricontourf(x,y,z,levels,cmap='jet')"
+    "# data=np.loadtxt(dir+'js.dat')\n",
+    "# x=data[:,0]\n",
+    "# y=data[:,1]\n",
+    "# z=data[:,2]\n",
+    "# plt.tricontourf(x,y,z,levels,cmap='jet')"
    ]
   },
   {
@@ -290,14 +290,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt(dir+'cos2Yy.dat')\n",
-    "t=data[:,0]\n",
-    "v=data[:,1]\n",
-    "plt.plot(t,v,'k-')\n",
-    "plt.xlabel('Time ('+timeUnit+')')\n",
-    "plt.ylabel('$\\\\langle \\\\mathrm{cos}^2 \\\\theta \\\\rangle _{Zz}$')\n",
-    "plt.savefig(dir+'cos2Yy'+figureType,bbox_inches='tight',dpi=figureDPI)\n",
-    "plt.show()"
+    "from matplotlib.ticker import MaxNLocator\n",
+    "data=np.loadtxt(dir+\"js.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
+    "print(ny)\n",
+    "nx=int((max(x)-min(x))/(x[ny]-x[0]))-1\n",
+    "zMesh=np.zeros((ny,nx))\n",
+    "len1=len(z)\n",
+    "for i in range(1,nx):\n",
+    "    for j in range(1,ny):\n",
+    "        if ((i-1)*ny+j-1)<len1:\n",
+    "            zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
+    "print('nx= ',nx,' ny= ',ny)\n",
+    "print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
+    "print('x[50]',x[50])\n",
+    "print(x[0])\n",
+    "print(zMesh)\n",
+    "xMesh=np.linspace(min(x),max(x),nx)\n",
+    "yMesh=np.linspace(min(y),max(y),ny)\n",
+    "#xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
+    "ax1=plt.gca()\n",
+    "plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
+    "ax1.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "ax1.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "plt.xlim(-(x[ny]-x[0])/2,0.1)\n",
+    "# plt.ylim(-0.5,19.5)\n",
+    "plt.xlabel('$t$ (ps)')\n",
+    "plt.ylabel('$J$')\n",
+    "# plt.title(\"Ground state, $t$ = \"+fileList1[ii][11:17]+\" fs\",loc='left')\n",
+    "plt.colorbar(format=cbformat)\n",
+    "plt.savefig(dir+\"p_j.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "os.startfile(dir+\"p_J.\"+figureType)"
    ]
   },
   {
@@ -306,14 +332,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt(dir+'cos2Xx.dat')\n",
-    "t=data[:,0]\n",
-    "v=data[:,1]\n",
-    "plt.plot(t,v,'k-')\n",
-    "plt.xlabel('Time ('+timeUnit+')')\n",
-    "plt.ylabel('$\\\\langle \\\\mathrm{cos}^2 \\\\theta \\\\rangle _{Zz}$')\n",
-    "plt.savefig(dir+'cos2Xx'+figureType,bbox_inches='tight',dpi=figureDPI)\n",
-    "plt.show()"
+    "# data=np.loadtxt(dir+'cos2Yy.dat')\n",
+    "# t=data[:,0]\n",
+    "# v=data[:,1]\n",
+    "# plt.plot(t,v,'k-')\n",
+    "# plt.xlabel('Time ('+timeUnit+')')\n",
+    "# plt.ylabel('$\\\\langle \\\\mathrm{cos}^2 \\\\theta \\\\rangle _{Zz}$')\n",
+    "# plt.savefig(dir+'cos2Yy'+figureType,bbox_inches='tight',dpi=figureDPI)\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data=np.loadtxt(dir+'cos2Xx.dat')\n",
+    "# t=data[:,0]\n",
+    "# v=data[:,1]\n",
+    "# plt.plot(t,v,'k-')\n",
+    "# plt.xlabel('Time ('+timeUnit+')')\n",
+    "# plt.ylabel('$\\\\langle \\\\mathrm{cos}^2 \\\\theta \\\\rangle _{Zz}$')\n",
+    "# plt.savefig(dir+'cos2Xx'+figureType,bbox_inches='tight',dpi=figureDPI)\n",
+    "# plt.show()"
    ]
   },
   {
@@ -365,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
