--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\dataofpro\\\\'"
+    "dir='D:\\\\doc\\\\data\\\\pulses\\\\chirp\\\\'"
    ]
   },
   {
