--- a/Python/LAMAO.ipynb
+++ b/Python/LAMAO.ipynb
@@ -150,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\dataofpro\\\\test\\\\11042106\\\\'\n",
+    "dir='D:\\\\dataofpro\\\\test\\\\11051230\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "# f=open(dir+\"alog.txt\",encoding=\"utf-8\")\n",
@@ -256,6 +256,7 @@
     "t=data[:,0]\n",
     "v=data[:,1]\n",
     "plt.plot(t,v,'k-')\n",
+    "plt.xlim(0,5)\n",
     "plt.xlabel('Time ('+timeUnit+')')\n",
     "plt.ylabel('$\\\\langle \\\\mathrm{cos} \\\\theta \\\\rangle _{Zz}$')\n",
     "ax=plt.subplot(2,2,2)\n",
@@ -264,6 +265,7 @@
     "t=data[:,0]\n",
     "v=data[:,1]\n",
     "plt.plot(t,v,'k-')\n",
+    "plt.xlim(0,5)\n",
     "plt.xlabel('Time ('+timeUnit+')')\n",
     "plt.ylabel('$\\\\langle \\\\mathrm{cos}^2 \\\\theta \\\\rangle _{Zz}$')\n",
     "ax=plt.subplot(2,2,3)\n",
@@ -272,16 +274,19 @@
     "t=data[:,0]\n",
     "v=data[:,1]\n",
     "plt.plot(t,v,'k-')\n",
+    "plt.xlim(0,5)\n",
     "plt.xlabel('Time ('+timeUnit+')')\n",
-    "plt.ylabel('$\\\\langle \\\\mathrm{cos} ^2\\\\theta \\\\rangle _{Zz}$')\n",
+    "plt.ylabel('$\\\\langle \\\\mathrm{cos} ^2\\\\theta \\\\rangle _{Xx}$')\n",
     "ax=plt.subplot(2,2,4)\n",
     "setlabel(ax,'(d)')\n",
-    "data=np.loadtxt(dir+'cos2Xx.dat')\n",
+    "data=np.loadtxt(dir+'cos2Yy.dat')\n",
     "t=data[:,0]\n",
     "v=data[:,1]\n",
     "plt.plot(t,v,'k-')\n",
+    "plt.xlim(0,5)\n",
     "plt.xlabel('Time ('+timeUnit+')')\n",
-    "plt.ylabel('$\\\\langle \\\\mathrm{cos} ^2\\\\theta \\\\rangle _{Zz}$')"
+    "plt.ylabel('$\\\\langle \\\\mathrm{cos} ^2\\\\theta \\\\rangle _{Yy}$')\n",
+    "plt.savefig(dir+'coss.'+figureType,dpi=figureDPI)"
    ]
   },
   {
@@ -316,7 +321,7 @@
     "plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
     "ax1.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
     "ax1.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
-    "plt.xlim(-(x[ny]-x[0])/2,0.1)\n",
+    "# plt.xlim(-(x[ny]-x[0])/2,0.1)\n",
     "# plt.ylim(-0.5,19.5)\n",
     "plt.xlabel('$t$ (ps)')\n",
     "plt.ylabel('$J$')\n",
