--- a/Python/LAMAO.ipynb
+++ b/Python/LAMAO.ipynb
@@ -150,11 +150,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\dataofpro\\\\test\\\\11051230\\\\'\n",
+    "dir='D:\\\\dataofpro\\\\test\\\\11061433\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "# f=open(dir+\"alog.txt\",encoding=\"utf-8\")\n",
-    "# print(f.read(1500))"
+    "# print(f.read(1500))\n",
+    "TimeBegin=0\n",
+    "TimeEnd=10"
    ]
   },
   {
@@ -167,6 +169,7 @@
     "t=data[:,0]\n",
     "v=data[:,1]\n",
     "plt.plot(t,v,'k-')\n",
+    "plt.xlim(TimeBegin,TimeEnd)\n",
     "plt.xlabel('Time ('+timeUnit+')')\n",
     "plt.ylabel('$E(t)$ (a.u.)')\n",
     "plt.savefig(dir+'pluse'+figureType,bbox_inches='tight',dpi=figureDPI)\n",
@@ -187,6 +190,110 @@
     "plt.ylabel('$\\\\langle J\\\\rangle$')\n",
     "plt.savefig(dir+'J'+figureType,bbox_inches='tight',dpi=figureDPI)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8*2/2.54,13/2.54))\n",
+    "file=dir+'cos1Zz.dat'\n",
+    "if fee(file):\n",
+    "    i=1\n",
+    "    ax=plt.subplot(2,2,i)\n",
+    "    setlabel(ax,'(a)')\n",
+    "    data=np.loadtxt(file)\n",
+    "    t=data[:,0]\n",
+    "    v=data[:,1]\n",
+    "    plt.plot(t,v,'k-')\n",
+    "    plt.xlim(TimeBegin,TimeEnd)\n",
+    "    plt.xlabel('Time ('+timeUnit+')')\n",
+    "    plt.ylabel('$\\\\langle \\\\mathrm{cos} \\\\theta \\\\rangle _{Zz}$')\n",
+    "file=dir+'cos2Zz.dat'\n",
+    "if fee(file):\n",
+    "    i=i+1\n",
+    "    ax=plt.subplot(2,2,i)\n",
+    "    setlabel(ax,'(b)')\n",
+    "    data=np.loadtxt(file)\n",
+    "    t=data[:,0]\n",
+    "    v=data[:,1]\n",
+    "    plt.plot(t,v,'k-')\n",
+    "    plt.xlim(TimeBegin,TimeEnd)\n",
+    "    plt.xlabel('Time ('+timeUnit+')')\n",
+    "    plt.ylabel('$\\\\langle \\\\mathrm{cos}^2 \\\\theta \\\\rangle _{Zz}$')\n",
+    "file=dir+'cos2Xx.dat'\n",
+    "if fee(file):\n",
+    "    i=i+1\n",
+    "    ax=plt.subplot(2,2,i)\n",
+    "    setlabel(ax,'(c)')\n",
+    "    data=np.loadtxt(file)\n",
+    "    t=data[:,0]\n",
+    "    v=data[:,1]\n",
+    "    plt.plot(t,v,'k-')\n",
+    "    plt.xlim(0,5)\n",
+    "    plt.xlabel('Time ('+timeUnit+')')\n",
+    "    plt.ylabel('$\\\\langle \\\\mathrm{cos} ^2\\\\theta \\\\rangle _{Xx}$')\n",
+    "file=dir+'cos2Yy.dat'\n",
+    "if fee(file):\n",
+    "    i=i+1\n",
+    "    ax=plt.subplot(2,2,i)\n",
+    "    setlabel(ax,'(d)')\n",
+    "    data=np.loadtxt()\n",
+    "    t=data[:,0]\n",
+    "    v=data[:,1]\n",
+    "    plt.plot(t,v,'k-')\n",
+    "    plt.xlim(TimeBegin,TimeEnd)\n",
+    "    plt.xlabel('Time ('+timeUnit+')')\n",
+    "    plt.ylabel('$\\\\langle \\\\mathrm{cos} ^2\\\\theta \\\\rangle _{Yy}$')\n",
+    "plt.savefig(dir+'coss.'+figureType,dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib.ticker import MaxNLocator\n",
+    "data=np.loadtxt(dir+\"js.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "ny=int((max(y)-min(y))/(y[1]-y[0]))+1\n",
+    "print(ny)\n",
+    "nx=int((max(x)-min(x))/(x[ny]-x[0]))-1\n",
+    "zMesh=np.zeros((ny,nx))\n",
+    "len1=len(z)\n",
+    "for i in range(1,nx):\n",
+    "    tot=0\n",
+    "    for j in range(1,ny):\n",
+    "        if ((i-1)*ny+j-1)<len1:\n",
+    "            zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
+    "            tot=tot+z[(i-1)*ny+j-1]\n",
+    "    print(tot)\n",
+    "# print('nx= ',nx,' ny= ',ny)\n",
+    "# print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
+    "# print('x[50]',x[50])\n",
+    "# print(x[0])\n",
+    "# print(zMesh)\n",
+    "xMesh=np.linspace(min(x),max(x),nx)\n",
+    "yMesh=np.linspace(min(y),max(y),ny)\n",
+    "#xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
+    "ax1=plt.gca()\n",
+    "plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
+    "ax1.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "ax1.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "# plt.xlim(0.9005,1.05)\n",
+    "plt.xlim(TimeBegin,TimeEnd)\n",
+    "# plt.ylim(-0.5,19.5)\n",
+    "plt.xlabel('$t$ (ps)')\n",
+    "plt.ylabel('$J$')\n",
+    "# plt.title(\"Ground state, $t$ = \"+fileList1[ii][11:17]+\" fs\",loc='left')\n",
+    "plt.colorbar(format=cbformat)\n",
+    "plt.savefig(dir+\"p_j.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "os.startfile(dir+\"p_J.\"+figureType)"
    ]
   },
   {
@@ -241,94 +348,6 @@
     "# y=data[:,1]\n",
     "# z=data[:,2]\n",
     "# plt.tricontourf(x,y,z,levels,cmap='jet')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(8*2/2.54,13/2.54))\n",
-    "ax=plt.subplot(2,2,1)\n",
-    "setlabel(ax,'(a)')\n",
-    "data=np.loadtxt(dir+'cos1Zz.dat')\n",
-    "t=data[:,0]\n",
-    "v=data[:,1]\n",
-    "plt.plot(t,v,'k-')\n",
-    "plt.xlim(0,5)\n",
-    "plt.xlabel('Time ('+timeUnit+')')\n",
-    "plt.ylabel('$\\\\langle \\\\mathrm{cos} \\\\theta \\\\rangle _{Zz}$')\n",
-    "ax=plt.subplot(2,2,2)\n",
-    "setlabel(ax,'(b)')\n",
-    "data=np.loadtxt(dir+'cos2Zz.dat')\n",
-    "t=data[:,0]\n",
-    "v=data[:,1]\n",
-    "plt.plot(t,v,'k-')\n",
-    "plt.xlim(0,5)\n",
-    "plt.xlabel('Time ('+timeUnit+')')\n",
-    "plt.ylabel('$\\\\langle \\\\mathrm{cos}^2 \\\\theta \\\\rangle _{Zz}$')\n",
-    "ax=plt.subplot(2,2,3)\n",
-    "setlabel(ax,'(c)')\n",
-    "data=np.loadtxt(dir+'cos2Xx.dat')\n",
-    "t=data[:,0]\n",
-    "v=data[:,1]\n",
-    "plt.plot(t,v,'k-')\n",
-    "plt.xlim(0,5)\n",
-    "plt.xlabel('Time ('+timeUnit+')')\n",
-    "plt.ylabel('$\\\\langle \\\\mathrm{cos} ^2\\\\theta \\\\rangle _{Xx}$')\n",
-    "ax=plt.subplot(2,2,4)\n",
-    "setlabel(ax,'(d)')\n",
-    "data=np.loadtxt(dir+'cos2Yy.dat')\n",
-    "t=data[:,0]\n",
-    "v=data[:,1]\n",
-    "plt.plot(t,v,'k-')\n",
-    "plt.xlim(0,5)\n",
-    "plt.xlabel('Time ('+timeUnit+')')\n",
-    "plt.ylabel('$\\\\langle \\\\mathrm{cos} ^2\\\\theta \\\\rangle _{Yy}$')\n",
-    "plt.savefig(dir+'coss.'+figureType,dpi=figureDPI)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from matplotlib.ticker import MaxNLocator\n",
-    "data=np.loadtxt(dir+\"js.dat\")\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "z=data[:,2]\n",
-    "ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
-    "print(ny)\n",
-    "nx=int((max(x)-min(x))/(x[ny]-x[0]))-1\n",
-    "zMesh=np.zeros((ny,nx))\n",
-    "len1=len(z)\n",
-    "for i in range(1,nx):\n",
-    "    for j in range(1,ny):\n",
-    "        if ((i-1)*ny+j-1)<len1:\n",
-    "            zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
-    "print('nx= ',nx,' ny= ',ny)\n",
-    "print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
-    "print('x[50]',x[50])\n",
-    "print(x[0])\n",
-    "print(zMesh)\n",
-    "xMesh=np.linspace(min(x),max(x),nx)\n",
-    "yMesh=np.linspace(min(y),max(y),ny)\n",
-    "#xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
-    "ax1=plt.gca()\n",
-    "plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
-    "ax1.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
-    "ax1.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
-    "# plt.xlim(-(x[ny]-x[0])/2,0.1)\n",
-    "# plt.ylim(-0.5,19.5)\n",
-    "plt.xlabel('$t$ (ps)')\n",
-    "plt.ylabel('$J$')\n",
-    "# plt.title(\"Ground state, $t$ = \"+fileList1[ii][11:17]+\" fs\",loc='left')\n",
-    "plt.colorbar(format=cbformat)\n",
-    "plt.savefig(dir+\"p_j.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
-    "os.startfile(dir+\"p_J.\"+figureType)"
    ]
   },
   {
@@ -398,7 +417,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
