--- a/Python/LIMAOPlot.ipynb
+++ b/Python/LIMAOPlot.ipynb
@@ -337,7 +337,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
