--- a/Python/mplot.ipynb
+++ b/Python/mplot.ipynb
@@ -192,8 +192,11 @@
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
-    "ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
-    "nx=int((max(x)-min(x))/(x[ny]-x[0]))+1+1\n",
+    "ny=int((max(y)-min(y))/(y[1]-y[0]))+1\n",
+    "print(ny)\n",
+    "# nx=int((max(x)-min(x))/(x[ny]-x[0]))+1+1\n",
+    "nx=int(len(x)/ny)\n",
+    "print(ny,nx)\n",
     "zMesh=np.zeros((ny,nx))\n",
     "for i in range(1,nx):\n",
     "    for j in range(1,ny):\n",
@@ -271,7 +274,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -285,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
