--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -1070,6 +1070,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ax=plt.gca()\n",
+    "data=np.loadtxt(dir+'data\\\\FCR.dat')\n",
+    "r=data[:,0]\n",
+    "fc1=data[:,1]\n",
+    "# fc2=data[:,2]\n",
+    "plt.plot(r,fc1,'k--')\n",
+    "plt.xlim(min(r),10.0)\n",
+    "sciforyax(ax)\n",
+    "plt.xlabel('$R$')\n",
+    "plt.ylabel('Transition amplitude (arb.units)')\n",
+    "plt.savefig(dir+'picture\\\\TraAmp.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig = plt.figure(tight_layout=True,figsize=(cm2inch(8*2),cm2inch(6.5*2)))\n",
     "intDir=\"D:\\\\doc\\\\data\\\\onepump\\\\onepump200\\\\\"\n",
     "subdir='D:\\\\doc\\\\data\\\\ion1test\\\\tpp\\\\data\\\\'\n",
