--- a/Python/mplot.ipynb
+++ b/Python/mplot.ipynb
@@ -186,6 +186,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data =np.loadtxt(dir+\"pop_j_t.dat\")\n",
+    "t=data[:,0]\n",
+    "legend=[]\n",
+    "linsty=[\"k-\",\"r--\",\"b-.\",\"g:\",\"k--\"]\n",
+    "colsty=[\"k\",\"r\",\"b\",\"g\"]\n",
+    "for i in range(1,5):\n",
+    "    p=data[:,i]\n",
+    "    plt.plot(t,p,linsty[i])\n",
+    "    legend.append(\"$J=$ \"+str(i-1))\n",
+    "plt.legend(legend)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from matplotlib.ticker import MaxNLocator\n",
     "data =np.loadtxt(dir+\"pop_j_t.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
