--- a/Python/LIMAOPlot.ipynb
+++ b/Python/LIMAOPlot.ipynb
@@ -169,8 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "dir='D:\\\\dataofpro\\\\test\\\\Len100000nm\\\\'\n",
+    "dir='D:\\\\dataofpro\\\\test\\\\11132121\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "levels=100\n",
@@ -186,50 +185,58 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(cm2inch(16),cm2inch(13)))\n",
-    "ax=plt.axes([0.05,0.55,0.40,0.4])\n",
-    "setlabelm(ax,\"(a)\",[0.85,0.85])\n",
-    "data=np.loadtxt(dir+\"cos1Zz.dat\")\n",
-    "x=data[0:,0]\n",
-    "y=data[0:,1]\n",
-    "#plt.xlim(0,2)\n",
-    "ax=plt.plot(x,y,'k-')#,data[:,0],data[:,2],'r-',data[:,0],1-data[:,1]-data[:,2],'b-')\n",
-    "plt.xlim(0,5)\n",
-    "#plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.70))\n",
-    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
-    "plt.ylabel(\"$\\\\langle$cos$\\\\theta\\\\rangle_{Zz}$\")\n",
-    "ax=plt.axes([0.55,0.55,0.40,0.4])\n",
-    "setlabelm(ax,\"(b)\",[0.85,0.85])\n",
-    "data=np.loadtxt(dir+\"cos2Zz.dat\")\n",
-    "x=data[0:,0]\n",
-    "y=data[0:,1]\n",
-    "#plt.xlim(0,2)\n",
-    "ax=plt.plot(x,y,'k-')#,data[:,0],data[:,2],'r-',data[:,0],1-data[:,1]-data[:,2],'b-')\n",
-    "plt.xlim(0,5)\n",
-    "#plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.70))\n",
-    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
-    "plt.ylabel(\"$\\\\langle$cos$^2\\\\theta\\\\rangle_{Zz}$\")\n",
-    "ax=plt.axes([0.05,0.05,0.40,0.4])\n",
-    "setlabelm(ax,\"(c)\",[0.85,0.85])\n",
-    "data=np.loadtxt(dir+\"cos2Yy.dat\")\n",
-    "x=data[0:,0]\n",
-    "y=data[0:,1]\n",
-    "#plt.xlim(0,2)\n",
-    "ax=plt.plot(x,y,'k-')#,data[:,0],data[:,2],'r-',data[:,0],1-data[:,1]-data[:,2],'b-')\n",
-    "plt.xlim(0,5)\n",
-    "#plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.70))\n",
-    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
-    "plt.ylabel(\"$\\\\langle$cos$^2\\\\theta\\\\rangle_{Yy}$\")\n",
-    "ax=plt.axes([0.55,0.05,0.40,0.4])\n",
-    "setlabelm(ax,\"(d)\",[0.85,0.85])\n",
-    "data=np.loadtxt(dir+\"cos2Xx.dat\")\n",
-    "x=data[0:,0]\n",
-    "y=data[0:,1]\n",
-    "#plt.xlim(0,2)\n",
-    "ax=plt.plot(x,y,'k-')#,data[:,0],data[:,2],'r-',data[:,0],1-data[:,1]-data[:,2],'b-')\n",
-    "plt.xlim(0,5)\n",
-    "#plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.70))\n",
-    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
-    "plt.ylabel(\"$\\\\langle$cos$^2\\\\theta\\\\rangle_{Xx}$\")"
+    "file=dir+\"cos1Zz.dat\"\n",
+    "if fee(file):\n",
+    "    ax=plt.axes([0.05,0.55,0.40,0.4])\n",
+    "    setlabelm(ax,\"(a)\",[0.85,0.85])\n",
+    "    data=np.loadtxt(file)\n",
+    "    x=data[0:,0]\n",
+    "    y=data[0:,1]\n",
+    "    #plt.xlim(0,2)\n",
+    "    ax=plt.plot(x,y,'k-')#,data[:,0],data[:,2],'r-',data[:,0],1-data[:,1]-data[:,2],'b-')\n",
+    "    plt.xlim(0,5)\n",
+    "    #plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.70))\n",
+    "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "    plt.ylabel(\"$\\\\langle$cos$\\\\theta\\\\rangle_{Zz}$\")\n",
+    "file=dir+\"cos2Zz.dat\"\n",
+    "if fee(file):\n",
+    "    ax=plt.axes([0.55,0.55,0.40,0.4])\n",
+    "    setlabelm(ax,\"(b)\",[0.85,0.85])\n",
+    "    data=np.loadtxt(dir+\"cos2Zz.dat\")\n",
+    "    x=data[0:,0]\n",
+    "    y=data[0:,1]\n",
+    "    #plt.xlim(0,2)\n",
+    "    ax=plt.plot(x,y,'k-')#,data[:,0],data[:,2],'r-',data[:,0],1-data[:,1]-data[:,2],'b-')\n",
+    "    plt.xlim(0,5)\n",
+    "    #plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.70))\n",
+    "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "    plt.ylabel(\"$\\\\langle$cos$^2\\\\theta\\\\rangle_{Zz}$\")\n",
+    "file=dir+\"cos2Yy.dat\"\n",
+    "if fee(file):\n",
+    "    ax=plt.axes([0.05,0.05,0.40,0.4])\n",
+    "    setlabelm(ax,\"(c)\",[0.85,0.85])\n",
+    "    data=np.loadtxt(dir+\"cos2Yy.dat\")\n",
+    "    x=data[0:,0]\n",
+    "    y=data[0:,1]\n",
+    "    #plt.xlim(0,2)\n",
+    "    ax=plt.plot(x,y,'k-')#,data[:,0],data[:,2],'r-',data[:,0],1-data[:,1]-data[:,2],'b-')\n",
+    "    plt.xlim(0,5)\n",
+    "    #plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.70))\n",
+    "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "    plt.ylabel(\"$\\\\langle$cos$^2\\\\theta\\\\rangle_{Yy}$\")\n",
+    "file=dir+\"cos2Xx.dat\"\n",
+    "if fee(file):\n",
+    "    ax=plt.axes([0.55,0.05,0.40,0.4])\n",
+    "    setlabelm(ax,\"(d)\",[0.85,0.85])\n",
+    "    data=np.loadtxt(dir+\"cos2Xx.dat\")\n",
+    "    x=data[0:,0]\n",
+    "    y=data[0:,1]\n",
+    "    #plt.xlim(0,2)\n",
+    "    ax=plt.plot(x,y,'k-')#,data[:,0],data[:,2],'r-',data[:,0],1-data[:,1]-data[:,2],'b-')\n",
+    "    plt.xlim(0,5)\n",
+    "    #plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.70))\n",
+    "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "    plt.ylabel(\"$\\\\langle$cos$^2\\\\theta\\\\rangle_{Xx}$\")"
    ]
   },
   {
