--- a/Python/mplot.ipynb
+++ b/Python/mplot.ipynb
@@ -205,7 +205,7 @@
    "outputs": [],
    "source": [
     "from matplotlib.ticker import MaxNLocator\n",
-    "data =np.loadtxt(dir+\"pop_j_t.dat\")\n",
+    "data =np.loadtxt(dir+\"phase.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
@@ -226,7 +226,7 @@
     "ax1.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
     "# setlabel(ax1,\"(a)\")\n",
     "# plt.xlim(x[0]/2,max(x)-x[0])\n",
-    "plt.ylim(-0.5,11.5)\n",
+    "plt.ylim(0.5,11.5)\n",
     "plt.xlim(min(x),5)\n",
     "plt.xlabel('Time (ps)')\n",
     "plt.ylabel('$J$')\n",
@@ -306,12 +306,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
+    "hash": "8a5edab282632443219e051e4ade2d1d5bbc671c781051bf1437897cbdfea0f1"
    }
   }
  },
