--- a/Python/oriplot.ipynb
+++ b/Python/oriplot.ipynb
@@ -329,7 +329,7 @@
     "# plt.xlim(TimeBegin, TimeEnd)\n",
     "# plt.xlim(-10,2100)\n",
     "sciforyax(ax)\n",
-    "plt.plot(x,y1,'k-',x,y4,'r-.',x,-y4,'r-.')#,x,y2,'b--',x,y4,'r-.')#,x,y2,'r-')\n",
+    "plt.plot(x,y1+y2,'k-',x,y4,'r:',x,-y4,'r:')#,x,y2,'b--',x,y4,'r-.')#,x,y2,'r-')\n",
     "#plt.legend([\"First\", \"Second\"],loc=(0.75,0.7))\n",
     "plt.savefig(dir+\"LaserFiled.jpeg\",bbox_inches = 'tight',transparent=True,dpi=600)\n",
     "plt.show()"
@@ -615,7 +615,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
+    "hash": "8a5edab282632443219e051e4ade2d1d5bbc671c781051bf1437897cbdfea0f1"
    }
   }
  },
