--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\doc\\\\data\\\\fc\\\\fc12\\\\'"
+    "dir='D:\\\\doc\\\\data\\\\fc\\\\FCRadTest1\\\\'"
    ]
   },
   {
@@ -262,7 +262,7 @@
     "    ax=plt.subplot(1,2,2)\n",
     "    setlabel(ax,\"(b)\")\n",
     "    data =np.loadtxt(dir+\"timeenergyspctra.dat\")\n",
-    "    #DataAng=scipy.ndimage.zoom(DataAng,1)\n",
+    "    #data=scipy.ndimage.zoom(data,1)\n",
     "    #plt.style.use('_mpl-gallery-nogrid')\n",
     "    l=np.argmax(data[:,2])\n",
     "    x=data[l-10:l+90,1]\n",
@@ -457,11 +457,11 @@
     "    import matplotlib.ticker as ticker\n",
     "    plt.figure(figsize=(16/2.54,13/2.54))\n",
     "    plt.subplot(2,2,1)\n",
-    "    DataAng =np.loadtxt(dir+\"vgr_ang.dat\")\n",
+    "    data =np.loadtxt(dir+\"vgr_ang.dat\")\n",
     "    #plt.style.use('_mpl-gallery-nogrid')\n",
-    "    x=DataAng[:,0]\n",
-    "    y=DataAng[:,1]/180\n",
-    "    z=DataAng[:,2]\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]/180\n",
+    "    z=data[:,2]\n",
     "    setlabel(ax,\"(a)\")\n",
     "    plt.xlim(min(x), max(x))\n",
     "    #plt.ylim(min(y),180)\n",
@@ -470,11 +470,11 @@
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$\\\\theta$ $(\\\\pi)$\")\n",
     "    plt.subplot(2,2,2)\n",
-    "    DataAng =np.loadtxt(dir+\"Exc_ang.dat\")\n",
+    "    data =np.loadtxt(dir+\"Exc_ang.dat\")\n",
     "    #plt.style.use('_mpl-gallery-nogrid')\n",
-    "    x=DataAng[:,0]\n",
-    "    y=DataAng[:,1]/180\n",
-    "    z=DataAng[:,2]\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]/180\n",
+    "    z=data[:,2]\n",
     "    setlabel(ax,\"(b)\")\n",
     "    plt.xlim(TimeTurn+1,max(x))\n",
     "    #plt.ylim(min(y),180)\n",
@@ -483,11 +483,11 @@
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$\\\\theta$ $(\\\\pi)$\")\n",
     "    plt.subplot(2,2,3)\n",
-    "    DataAng =np.loadtxt(dir+\"Ion_ang.dat\")\n",
+    "    data =np.loadtxt(dir+\"Ion_ang.dat\")\n",
     "    #plt.style.use('_mpl-gallery-nogrid')\n",
-    "    x=DataAng[:,0]\n",
-    "    y=DataAng[:,1]/180\n",
-    "    z=DataAng[:,2]\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]/180\n",
+    "    z=data[:,2]\n",
     "    plt.xlim(TimeTurn+1,max(x))\n",
     "    #plt.ylim(min(y),180)\n",
     "    setlabel(ax,\"(c)\")\n",
@@ -496,11 +496,11 @@
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$\\\\theta$ $(\\\\pi)$\")\n",
     "    plt.subplot(2,2,4)\n",
-    "    DataAng =np.loadtxt(dir+\"TotalAngDis.dat\")\n",
+    "    data =np.loadtxt(dir+\"TotalAngDis.dat\")\n",
     "    #plt.style.use('_mpl-gallery-nogrid')\n",
-    "    x=DataAng[:,0]\n",
-    "    y=DataAng[:,1]/180\n",
-    "    z=DataAng[:,2]\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]/180\n",
+    "    z=data[:,2]\n",
     "    setlabel(ax,\"(d)\")\n",
     "    #plt.ylim(min(y),180)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
@@ -526,11 +526,11 @@
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$\\\\theta$ $(\\\\pi)$\")\n",
     "    ax=plt.subplot(2,2,2)\n",
-    "    DataAng =np.loadtxt(dir+\"ExcAngWave.dat\")\n",
+    "    data =np.loadtxt(dir+\"ExcAngWave.dat\")\n",
     "    #plt.style.use('_mpl-gallery-nogrid')\n",
-    "    x=DataAng[:,0]\n",
-    "    y=DataAng[:,1]/180\n",
-    "    z=DataAng[:,2]\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]/180\n",
+    "    z=data[:,2]\n",
     "    setlabel(ax,\"(b)\")\n",
     "    plt.xlim(TimeTurn+1,max(x))\n",
     "    #plt.ylim(min(y),180)\n",
@@ -540,11 +540,11 @@
     "    plt.ylabel(\"$\\\\theta$ $(\\\\pi)$\")\n",
     "    \n",
     "    ax=plt.subplot(2,2,3)\n",
-    "    DataAng =np.loadtxt(dir+\"IonAngWave.dat\")\n",
+    "    data =np.loadtxt(dir+\"IonAngWave.dat\")\n",
     "    #plt.style.use('_mpl-gallery-nogrid')\n",
-    "    x=DataAng[:,0]\n",
-    "    y=DataAng[:,1]/180\n",
-    "    z=DataAng[:,2]\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]/180\n",
+    "    z=data[:,2]\n",
     "    plt.xlim(TimeTurn+1,max(x))\n",
     "    #plt.ylim(min(y),180)\n",
     "    setlabel(ax,\"(c)\")\n",
@@ -553,11 +553,11 @@
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$\\\\theta$ $(\\\\pi)$\")\n",
     "    ax=plt.subplot(2,2,4)\n",
-    "    DataAng =np.loadtxt(dir+\"TotalAngDis.dat\")\n",
+    "    data =np.loadtxt(dir+\"TotalAngDis.dat\")\n",
     "    #plt.style.use('_mpl-gallery-nogrid')\n",
-    "    x=DataAng[:,0]\n",
-    "    y=DataAng[:,1]/180\n",
-    "    z=DataAng[:,2]\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]/180\n",
+    "    z=data[:,2]\n",
     "    #plt.ylim(min(y),180)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "    plt.xlim(TimeTurn+1,max(x))\n",
@@ -588,11 +588,11 @@
     "    from mpl_toolkits.axes_grid1.inset_locator import inset_axes\n",
     "    \n",
     "    ax=plt.subplot(2,2,1)\n",
-    "    DataAng =np.loadtxt(dir+\"vgr_rad.dat\")\n",
+    "    data =np.loadtxt(dir+\"vgr_rad.dat\")\n",
     "    #plt.style.use('_mpl-gallery-nogrid')\n",
-    "    x=DataAng[:,0]\n",
-    "    y=DataAng[:,1]\n",
-    "    z=DataAng[:,2]\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    z=data[:,2]\n",
     "    setlabel(ax,\"(a)\")\n",
     "    plt.xlim(TimeTurn+1, max(x))\n",
     "    plt.ylim(1.75,10.0)\n",
@@ -609,11 +609,11 @@
     "    \n",
     "    \n",
     "    ax=plt.subplot(2,2,2)\n",
-    "    DataAng =np.loadtxt(dir+\"Exc_rad.dat\")\n",
+    "    data =np.loadtxt(dir+\"Exc_rad.dat\")\n",
     "    #plt.style.use('_mpl-gallery-nogrid')\n",
-    "    x=DataAng[:,0]\n",
-    "    y=DataAng[:,1]\n",
-    "    z=DataAng[:,2]\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    z=data[:,2]\n",
     "    setlabel(ax,\"(b)\")\n",
     "    plt.xlim(TimeTurn+1,max(x))\n",
     "    plt.ylim(1.75,10.0)\n",
@@ -627,11 +627,11 @@
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$R$ (a.u.)\")\n",
     "    ax=plt.subplot(2,2,3)\n",
-    "    DataAng =np.loadtxt(dir+\"Ion_rad.dat\")\n",
+    "    data =np.loadtxt(dir+\"Ion_rad.dat\")\n",
     "    #plt.style.use('_mpl-gallery-nogrid')\n",
-    "    x=DataAng[:,0]\n",
-    "    y=DataAng[:,1]\n",
-    "    z=DataAng[:,2]\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    z=data[:,2]\n",
     "    plt.xlim(TimeTurn+1,max(x))\n",
     "    plt.ylim(1.75,10.0)\n",
     "    setlabel(ax,\"(c)\")\n",
@@ -644,11 +644,11 @@
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$R$ (a.u.)\")\n",
     "    ax=plt.subplot(2,2,4)\n",
-    "    DataAng =np.loadtxt(dir+\"TotalRadDis.dat\")\n",
+    "    data =np.loadtxt(dir+\"TotalRadDis.dat\")\n",
     "    #plt.style.use('_mpl-gallery-nogrid')\n",
-    "    x=DataAng[:,0]\n",
-    "    y=DataAng[:,1]\n",
-    "    z=DataAng[:,2]\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    z=data[:,2]\n",
     "    plt.xlim(TimeTurn+1,max(x))\n",
     "    plt.ylim(1.75,10.0)\n",
     "    setlabel(ax,\"(d)\")\n",
@@ -665,53 +665,53 @@
     "    from mpl_toolkits.axes_grid1.inset_locator import inset_axes\n",
     "    plt.figure(figsize=((16/2.54),(13/2.54)))\n",
     "    ax=plt.subplot(2,2,1)\n",
-    "    DataAng =np.loadtxt(dir+\"GroRadWave.dat\")\n",
+    "    data =np.loadtxt(dir+\"GroRadWave.dat\")\n",
     "    #plt.style.use('_mpl-gallery-nogrid')\n",
-    "    x=DataAng[:,0]\n",
-    "    y=DataAng[:,1]\n",
-    "    z=DataAng[:,2]\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    z=data[:,2]\n",
     "    setlabel(ax,\"(a)\")\n",
     "    plt.xlim(TimeTurn+1, max(x) )\n",
     "    plt.ylim(1.75,10.0)\n",
-    "    plt.tricontour(x,y,z,levels,cmap='jet')\n",
+    "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "\n",
     "    plt.colorbar(format=cbformat)\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$R$ (a.u.)\")\n",
-    "    axins = inset_axes(ax, width=\"40%\", height=\"30%\", loc='upper right',\n",
-    "    bbox_to_anchor=(0.0, 0.0, 0.99, 0.99),\n",
-    "    bbox_transform=ax.transAxes)\n",
-    "    zone_left = int(15/((x[-1]-x[0])/len(x)))\n",
-    "    zone_right =   int(25/((x[-1]-x[0])/len(x)))\n",
+    "    # axins = inset_axes(ax, width=\"40%\", height=\"30%\", loc='upper right',\n",
+    "    # bbox_to_anchor=(0.0, 0.0, 0.99, 0.99),\n",
+    "    # bbox_transform=ax.transAxes)\n",
+    "    # zone_left = int(15/((x[-1]-x[0])/len(x)))\n",
+    "    # zone_right =   int(25/((x[-1]-x[0])/len(x)))\n",
     "\n",
-    "    # 坐标轴的扩展比例（根据实际数据调整）\n",
-    "    x_ratio = 0.5 # x轴显示范围的扩展比例\n",
-    "    y_ratio = 0.5 # y轴显示范围的扩展比例\n",
+    "    # # 坐标轴的扩展比例（根据实际数据调整）\n",
+    "    # x_ratio = 0.5 # x轴显示范围的扩展比例\n",
+    "    # y_ratio = 0.5 # y轴显示范围的扩展比例\n",
     "\n",
-    "    # X轴的显示范围\n",
-    "    xlim0 = x[zone_left]-(x[zone_right]-x[zone_left])*x_ratio\n",
-    "    xlim1 = x[zone_right]+(x[zone_right]-x[zone_left])*x_ratio\n",
+    "    # # X轴的显示范围\n",
+    "    # xlim0 = x[zone_left]-(x[zone_right]-x[zone_left])*x_ratio\n",
+    "    # xlim1 = x[zone_right]+(x[zone_right]-x[zone_left])*x_ratio\n",
     "\n",
-    "    # Y轴的显示范围\n",
-    "    y = np.hstack((y[zone_left:zone_right]))\n",
-    "    ymin=1.75;ymax=4.25\n",
-    "    ylim0 = ymin#ymin-(ymax-ymin)*y_ratio\n",
-    "    ylim1 = ymax#ymax+(ymax-ymin)*y_ratio\n",
-    "    # ylim0 = np.min(y)-(np.max(y)-np.min(y))*y_ratio\n",
-    "    # ylim1 = np.max(y)+(np.max(y)-np.min(y))*y_ratio\n",
+    "    # # Y轴的显示范围\n",
+    "    # y = np.hstack((y[zone_left:zone_right]))\n",
+    "    # ymin=1.75;ymax=4.25\n",
+    "    # ylim0 = ymin#ymin-(ymax-ymin)*y_ratio\n",
+    "    # ylim1 = ymax#ymax+(ymax-ymin)*y_ratio\n",
+    "    # # ylim0 = np.min(y)-(np.max(y)-np.min(y))*y_ratio\n",
+    "    # # ylim1 = np.max(y)+(np.max(y)-np.min(y))*y_ratio\n",
     "\n",
-    "    # 调整子坐标系的显示范围\n",
-    "    axins.set_xlim(xlim0, xlim1)\n",
-    "    axins.set_ylim(ylim0, ylim1)\n",
-    "    # loc1 loc2: 坐标系的四个角\n",
-    "    # 1 (右上) 2 (左上) 3(左下) 4(右下)\n",
-    "    mark_inset(ax, axins, loc1=3, loc2=1, fc=\"none\", ec='k', lw=1)\n",
+    "    # # 调整子坐标系的显示范围\n",
+    "    # axins.set_xlim(xlim0, xlim1)\n",
+    "    # axins.set_ylim(ylim0, ylim1)\n",
+    "    # # loc1 loc2: 坐标系的四个角\n",
+    "    # # 1 (右上) 2 (左上) 3(左下) 4(右下)\n",
+    "    # mark_inset(ax, axins, loc1=3, loc2=1, fc=\"none\", ec='k', lw=1)\n",
     "    ax=plt.subplot(2,2,2)\n",
-    "    DataAng =np.loadtxt(dir+\"ExcRadWave.dat\")\n",
+    "    data =np.loadtxt(dir+\"ExcRadWave.dat\")\n",
     "    #plt.style.use('_mpl-gallery-nogrid')\n",
-    "    x=DataAng[:,0]\n",
-    "    y=DataAng[:,1]\n",
-    "    z=DataAng[:,2]\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    z=data[:,2]\n",
     "    setlabel(ax,\"(b)\")\n",
     "    plt.xlim(TimeTurn+1,max(x))\n",
     "    plt.ylim(1.75,10.0)\n",
@@ -720,11 +720,11 @@
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$R$ (a.u.)\")\n",
     "    ax=plt.subplot(2,2,3)\n",
-    "    DataAng =np.loadtxt(dir+\"IonRadWave.dat\")\n",
+    "    data =np.loadtxt(dir+\"IonRadWave.dat\")\n",
     "    #plt.style.use('_mpl-gallery-nogrid')\n",
-    "    x=DataAng[:,0]\n",
-    "    y=DataAng[:,1]\n",
-    "    z=DataAng[:,2]\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    z=data[:,2]\n",
     "    plt.xlim(TimeTurn+1,max(x))\n",
     "    plt.ylim(1.75,10.0)\n",
     "    setlabel(ax,\"(c)\")\n",
@@ -733,11 +733,11 @@
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$R$ (a.u.)\")\n",
     "    ax=plt.subplot(2,2,4)\n",
-    "    DataAng =np.loadtxt(dir+\"TotalRadDis.dat\")\n",
+    "    data =np.loadtxt(dir+\"TotalRadDis.dat\")\n",
     "    #plt.style.use('_mpl-gallery-nogrid')\n",
-    "    x=DataAng[:,0]\n",
-    "    y=DataAng[:,1]\n",
-    "    z=DataAng[:,2]\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    z=data[:,2]\n",
     "    plt.xlim(TimeTurn+1,max(x))\n",
     "    plt.ylim(1.75,10.0)\n",
     "    setlabel(ax,\"(d)\")\n",
@@ -911,12 +911,12 @@
     "file=dir+'timeenergyspctra.dat'\n",
     "if fee(file):  \n",
     "    plt.figure(figsize=(8/2.54,6.8/2.54))\n",
-    "    DataAng =np.loadtxt(dir+\"timeenergyspctra.dat\")\n",
-    "    #DataAng=scipy.ndimage.zoom(DataAng,1)\n",
+    "    data =np.loadtxt(dir+\"timeenergyspctra.dat\")\n",
+    "    #data=scipy.ndimage.zoom(data,1)\n",
     "    #plt.style.use('_mpl-gallery-nogrid')\n",
-    "    x=DataAng[:,0]\n",
-    "    y=DataAng[:,1]\n",
-    "    z=DataAng[:,2]\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    z=data[:,2]\n",
     "    # plt.xlim(-5, 5)\n",
     "    # plt.ylim(-5, 5)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
@@ -945,12 +945,12 @@
     "    print(\"The file is empty\")\n",
     "else:\n",
     "    setlabel(ax,\"(a)\")\n",
-    "    DataAng =np.loadtxt(dir+\"timeenergyspctra.dat\")\n",
-    "    #DataAng=scipy.ndimage.zoom(DataAng,1)\n",
+    "    data =np.loadtxt(dir+\"timeenergyspctra.dat\")\n",
+    "    #data=scipy.ndimage.zoom(data,1)\n",
     "    #plt.style.use('_mpl-gallery-nogrid')\n",
-    "    x=DataAng[:,0]\n",
-    "    y=DataAng[:,1]\n",
-    "    z=DataAng[:,2]\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    z=data[:,2]\n",
     "    # plt.xlim(-5, 5)\n",
     "    # plt.ylim(-5, 5)\n",
     "    ax=plt.tricontourf(x,y,z,levels,cmap='jet')\n",
@@ -962,7 +962,7 @@
     "    ax=plt.subplot(1,2,2)\n",
     "    setlabel(ax,\"(b)\")\n",
     "    data =np.loadtxt(dir+\"timeenergyspctra.dat\")\n",
-    "    #DataAng=scipy.ndimage.zoom(DataAng,1)\n",
+    "    #data=scipy.ndimage.zoom(data,1)\n",
     "    #plt.style.use('_mpl-gallery-nogrid')\n",
     "    l=np.argmax(data[:,2])\n",
     "    x=data[l-10:l+90,1]\n",
@@ -1696,16 +1696,16 @@
    "outputs": [],
    "source": [
     "if os.path.exists(dir+\"wave2d.dat\"):\n",
-    "    DataAng =np.loadtxt(dir+\"wave2d.dat\")\n",
+    "    data =np.loadtxt(dir+\"wave2d.dat\")\n",
     "else:   \n",
-    "    DataAng =np.loadtxt(dir+\"InitialWavePacket.dat\")\n",
+    "    data =np.loadtxt(dir+\"InitialWavePacket.dat\")\n",
     "import scipy.ndimage\n",
     "plt.figure(figsize=(8/2.54,6.8/2.54))\n",
-    "#DataAng=scipy.ndimage.zoom(DataAng,1)\n",
+    "#data=scipy.ndimage.zoom(data,1)\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "x=DataAng[:,0]\n",
-    "y=DataAng[:,1]\n",
-    "z=DataAng[:,2]\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
     "plt.xlim(-5, 5)\n",
     "plt.ylim(-5, 5)\n",
     "ax=plt.tricontourf(x,y,z,levels,cmap='jet')\n",
@@ -1871,7 +1871,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "del filpat;filpat=dir+\"FCrad.dat\"\n",
+    "\n",
+    "filpat=dir+\"FCrad.dat\"\n",
     "if fee(filpat):\n",
     "    plt.figure(figsize=(8/2.54,13/2.54))\n",
     "    data=np.loadtxt(filpat)\n",
@@ -1911,7 +1912,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "del filpat;filpat=dir+\"FCrad.dat\"\n",
+    "del filpat;filpat=dir+\"FCerad.dat\"\n",
     "if fee(filpat):\n",
     "    data=np.loadtxt(filpat)\n",
     "    x=data[:,0]\n",
@@ -1932,7 +1933,7 @@
     "                        top=0.9, \n",
     "                        wspace=0.25, \n",
     "                        hspace=0.2)\n",
-    "    plt.savefig(dir+\"RCRad.\"+figureType,bbox_inches = 'tight',transparent=True,dpi=figureDPI)\n",
+    "    plt.savefig(dir+\"RCeRad.\"+figureType,bbox_inches = 'tight',transparent=True,dpi=figureDPI)\n",
     "    plt.show()"
    ]
   },
@@ -2295,7 +2296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
