--- a/Python/VRAliOriPlot.ipynb
+++ b/Python/VRAliOriPlot.ipynb
@@ -161,7 +161,8 @@
     "dat=np.loadtxt(dir+'Alignment_total.dat')\n",
     "x=dat[:,0]\n",
     "y=dat[:,1]\n",
-    "plt.plot(x,y)"
+    "plt.plot(x,y)\n",
+    "plt.xlim(-1,9)"
    ]
   },
   {
@@ -174,6 +175,20 @@
     "x=dat[:,0]\n",
     "y=dat[:,1]\n",
     "plt.plot(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dat=np.loadtxt(dir+'TimWavPop.dat')\n",
+    "# dat=np.clip(dat,-1,1)\n",
+    "x=dat[:,0]\n",
+    "y=dat[:,1]\n",
+    "z=dat[:,2]\n",
+    "plt.tricontourf(x,y,z,level=levels,cmap='jet')"
    ]
   },
   {
@@ -223,7 +238,7 @@
     "x=dat[:,0]/180*np.pi\n",
     "y=dat[:,1]\n",
     "plt.plot(x,y)\n",
-    "plt.ylim(0,1)"
+    "# plt.ylim(0,1)"
    ]
   },
   {
@@ -300,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
