--- a/Python/orientation3d.ipynb
+++ b/Python/orientation3d.ipynb
@@ -14,26 +14,6 @@
     "from matplotlib import ticker\n",
     "plt.rcParams['ytick.right']  =plt.rcParams['xtick.top'] =True\n",
     "xminorLocator=MultipleLocator(2)\n",
-    "#plt.rcParams['set_minor_locator']=xminorLocator\n",
-    "# plt.rcParams.update({\n",
-    "#     \"text.usetex\": True,\n",
-    "#     \"font.family\": \"sans-serif\",\n",
-    "#     \"font.sans-serif\": [\"Time New Rroman\"]})\n",
-    "# # for Palatino and other serif fonts use:\n",
-    "# plt.rcParams.update({\n",
-    "#     \"text.usetex\": True,\n",
-    "#     \"font.family\": \"serif\",\n",
-    "#     #\"font.serif\": [\"Palatino\"],\n",
-    "#     \"font.serif\": [\"Time New Roman\"], \n",
-    "# })\n",
-    "# # It's also possible to use the reduced notation by directly setting font.family:\n",
-    "# plt.rcParams.update({\n",
-    "#   \"text.usetex\": True,\n",
-    "#   \"font.family\": \"Time New Roman\",\n",
-    "#   \"font.size\": 8,\n",
-    "# })\n",
-    "\n",
-    "\n",
     "def cm2inch(value):\n",
     "    return value/2.54\n",
     "\n",
@@ -65,12 +45,6 @@
     "    if legend:\n",
     "        ax.add_artist(legend)\n",
     "    line, = ax.plot(numpy.NaN,numpy.NaN,color='none',label=label,fillstyle='full')\n",
-    "    # legend_font = {\n",
-    "    # 'family': 'Times New Roman',\n",
-    "    # 'style':'normal',\n",
-    "    # 'size':10,\n",
-    "    # 'weight': \"bold\",\n",
-    "    # }\n",
     "    label_legend = ax.legend(handles=[line],\n",
     "                             loc=[-0.2,1.0005],\n",
     "                             handlelength=0.0,\n",
@@ -155,7 +129,6 @@
     "ax2.set_ylabel('$\\\\langle{\\\\rm cos^2} \\\\theta \\\\rangle$', color=color)  # we already handled the x-label with ax1\n",
     "ax2.plot(x2, y2,'--', color=color)\n",
     "ax2.tick_params(axis='y', labelcolor=color)\n",
-    "\n",
     "fig.tight_layout()  # otherwise the right y-label is slightly clipped\n",
     "plt.savefig(dir+\"OrientationAndAlignment.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
     "plt.show()"
@@ -173,11 +146,16 @@
     "j=data[:,0]\n",
     "m=data[:,1]\n",
     "p=data[:,2]\n",
-    "ax.scatter(j,m,p)\n",
-    "plt.xlabel(\"J\")\n",
-    "plt.ylabel(\"M\")\n",
-    "plt.title(\"Boltzman distributions\")\n",
-    "plt.savefig(dir+\"BoltzmanInitialDistribuiton.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "ax.scatter(j,m,p,color='k',marker='.')#ax.scatter(j,m,p)\n",
+    "plt.xlabel(\"$J$\")\n",
+    "plt.ylabel(\"$M$\")\n",
+    "# plt.xlim(0,5)\n",
+    "# plt.ylim(-5,5)\n",
+    "# plt.colorbar()\n",
+    "# ax.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "# ax.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "# plt.title(\"Boltzman distributions\")\n",
+    "plt.savefig(dir+\"BoltzmaniinalDistribuiton.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
     "plt.show()"
    ]
   },
@@ -187,6 +165,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from matplotlib.ticker import MaxNLocator\n",
+    "ax = fig.add_subplot()#projection='3d'\n",
+    "data=np.loadtxt(dir+\"BoltzmanDist.dat\")\n",
+    "print(data)\n",
+    "j=data[:,0]\n",
+    "m=data[:,1]\n",
+    "z=data[:,2]\n",
+    "# ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
+    "ny=27\n",
+    "nx=13\n",
+    "zMesh=np.zeros((ny,nx))\n",
+    "for i in range(1,nx):\n",
+    "    for j in range(0,13):\n",
+    "        if(abs(j)<i):\n",
+    "            zMesh[j,i]=z[j**2+i]\n",
+    "        else:\n",
+    "            zMesh[j,i]=0\n",
+    "# print('nx= ',nx,' ny= ',ny)\n",
+    "# print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
+    "# print('x[50]',x[50])\n",
+    "# print(x[0])\n",
+    "# print(zMesh)\n",
+    "xMesh=np.linspace(min(x),max(x),nx)\n",
+    "yMesh=np.linspace(min(y),max(y),ny)\n",
+    "#xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
+    "plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
+    "ax1.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "ax1.yaxis.set_major_locator(MaxNLocator(integer=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib.ticker import MaxNLocator\n",
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(projection='3d')\n",
     "data=np.loadtxt(dir+\"BoltzmanDist.dat\")\n",
@@ -194,10 +209,15 @@
     "j=data[:,0]\n",
     "m=data[:,1]\n",
     "p=data[:,2]\n",
-    "ax.scatter(j,m,p)\n",
-    "plt.xlabel(\"J\")\n",
-    "plt.ylabel(\"M\")\n",
-    "plt.title(\"Boltzman distributions\")\n",
+    "ax.scatter(j,m,p,color='k',marker='.')#ax.scatter(j,m,p)\n",
+    "plt.xlabel(\"$J$\")\n",
+    "plt.ylabel(\"$M$\")\n",
+    "# plt.xlim(0,5)\n",
+    "# plt.ylim(-5,5)\n",
+    "# plt.colorbar()\n",
+    "# ax.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "# ax.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "# plt.title(\"Boltzman distributions\")\n",
     "plt.savefig(dir+\"BoltzmanFinalDistribuiton.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
     "plt.show()"
    ]
@@ -334,13 +354,6 @@
     "# plt.tricontour(x,y,z,levels,cmap=\"jet\")\n",
     "# plt.plot3d(x,y,z)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
