--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -38,7 +38,7 @@
     "    return value/2.54\n",
     "\n",
     "plt.rcParams['figure.figsize'] = (cm2inch(8), cm2inch(6.5))\n",
-    "#plt.rcParams['figure.figsize'] =(4,3)#(3.5,2.5)\n",
+    "# plt.rcParams['figure.figsize'] =(3.5,2.2)#(3.5,2.5)\n",
     "plt.rcParams['lines.linewidth'] = 1\n",
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
@@ -149,7 +149,7 @@
    "source": [
     "intDir=\"D:\\\\doc\\\\data\\\\ion\\\\molecularData\\\\\"\n",
     "\n",
-    "plt.figure(figsize=(cm2inch(8*2),cm2inch(8)))\n",
+    "plt.figure(figsize=(cm2inch(8*2),cm2inch(6.5)))\n",
     "ax=plt.subplot(1,2,1)\n",
     "data=np.loadtxt(intDir+\"PotentialEnergy.dat\")\n",
     "np.savetxt(dir+\"data\\\\f1(1)PotentialEnergy.dat\",data)\n",
@@ -179,16 +179,24 @@
     "plt.plot(data[:,0],data[:,1],'k-',data[:,0],data[:,2],'r-.',data[:,0],data[:,3],'b--')\n",
     "plt.xlim(1.75,11)\n",
     "plt.legend([\"$\\\\mu_{XX} $\",\"$\\\\mu_{AA} $\",\"$\\\\mu_{XA} $\"],loc=(0.75,0.08))\n",
-    "# plt.tight_layout()\n",
-    "# plt.subplots_adjust(left=0.1,\n",
-    "#                     bottom=0.1, \n",
-    "#                     right=0.9, \n",
-    "#                     top=0.9, \n",
-    "#                     wspace=0.3, \n",
-    "#                     hspace=0.3)\n",
+    "plt.tight_layout()\n",
+    "plt.subplots_adjust(left=0.1,\n",
+    "                    bottom=0.15, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.25, \n",
+    "                    hspace=0.3)\n",
     "#plt.savefig(dir+\"PotentialEnergyAndDipoleMent.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
     "plt.savefig(dir+\"picture\\\\f1potDip.\"+figureType,dpi=figureDPI)#bbox_inches=\"tight\",,transparent=True\n",
-    "plt.show()"
+    "plt.show()\n",
+    "# os.startfile(dir+\"picture\\\\f1potDip.\"+figureType)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "图1. (a) 各个电子态的势能曲线， (b) 各态间相互跃迁偶极强度。"
    ]
   },
   {
@@ -2183,7 +2191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
