--- a/Python/xysplot.ipynb
+++ b/Python/xysplot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,31 +70,73 @@
     "    ax.add_artist(label_legend)\n",
     "    line.remove()\n",
     "levels=100\n",
-    "figureDPI=300\n",
+    "figureDPI=600\n",
     "figureType=\"eps\"\n",
-    "timeUnit=\"fs\""
+    "timeUnit=\"fs\"\n",
+    "def xyplot(int_dir,label_x,label_y,out_dir):\n",
+    "    if os.path.exists(int_dir):\n",
+    "        data=np.loadtxt(int_dir)\n",
+    "        # plt.xlim(TimeTurn,TimeEnd)\n",
+    "        ax=plt.plot(data[:,0],data[:,1],'k-')#,data[:,0],data[:,2],'r-',data[:,0],1-data[:,1]-data[:,2],'b-')\n",
+    "        # plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.70))\n",
+    "        plt.xlabel(label_x)\n",
+    "        plt.ylabel(label_y)\n",
+    "        plt.savefig(out_dir+int_dir[-7:-4]+figureType,dpi=figureDPI,bbox_inches=\"tight\")\n",
+    "    else:\n",
+    "        print(\"No dataset found.\")\n",
+    "def xyzplot(int_dir,x_label,y_label,out_dir):\n",
+    "    if os.path.exists(int_dir):\n",
+    "        dat=np.loadtxt(int_dir)\n",
+    "        plt.tricontourf(dat[:,0],dat[:,1],dat[:,2],levels,cmap='jet')\n",
+    "        plt.colorbar()\n",
+    "        plt.xlabel(x_label)\n",
+    "        plt.ylabel(y_label)\n",
+    "        plt.savefig(outdir+int_dir[-7:-4]+figureType,dpi=figureDPI,bbox_inches=\"tight\")\n",
+    "        plt.show()\n",
+    "    else:\n",
+    "        print(\"The dataset does not exist. \")\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def xyplot(in_dir,label_x,label_y,out_dir):\n",
-    "    \n",
-    "    # int_dir='D:\\\\doc\\\\data\\\\ion1test\\\\onepump2\\\\'\n",
-    "    if os.path.exists(int_dir):\n",
-    "        data=np.loadtxt(int_dir)\n",
-    "    else:\n",
-    "        print(\"No PopulationOfState dataset found.\")\n",
-    "    # plt.xlim(TimeTurn,TimeEnd)\n",
-    "    ax=plt.plot(data[:,0],data[:,1],'k-')#,data[:,0],data[:,2],'r-',data[:,0],1-data[:,1]-data[:,2],'b-')\n",
-    "    # plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.70))\n",
-    "    plt.xlabel(label_x)\n",
-    "    plt.ylabel(label_y)\n",
-    "    plt.savefig(out_dir+file_name,dpi=600,bbox_inches=\"tight\")"
+    "intdir='D:\\\\dataofpro\\\\'\n",
+    "outdir=intdir"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xyplot(intdir+'orientation.dat',\n",
+    "       'Time (fs)',\n",
+    "       '$\\\\langle \\\\mathrm{cos}\\\\theta\\\\rangle$',\n",
+    "       outdir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xyzplot(intdir+'cjm.dat',\n",
+    "        \"Time (fs)\",\n",
+    "        \"y\",intdir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
